Fix links on docker page

--- a/docker/index.html
+++ b/docker/index.html
@@ -6,9 +6,9 @@
 <body>
 <h1> Free Docker Available HERE!!!!!! </h1>
 <ul>
-  <li>Freeee docker in Linux: <a href="https://mlhlocal.host/docker-linux">https://mlhlocal.host/docker-linux</li>
-  <li>Freeee docker in Windows: <a href="https://mlhlocal.host/docker-linux">https://mlhlocal.host/docker-windows</li>
-  <li>Freeee docker in Macintosh: <a href="https://mlhlocal.host/docker-linux">https://mlhlocal.host/docker-mac</li>
+  <li>Freeee docker in Linux: <a href="https://mlhlocal.host/docker-linux">https://mlhlocal.host/docker-linux</a></li>
+  <li>Freeee docker in Windows: <a href="https://mlhlocal.host/docker-linux">https://mlhlocal.host/docker-windows</a></li>
+  <li>Freeee docker in Macintosh: <a href="https://mlhlocal.host/docker-linux">https://mlhlocal.host/docker-mac</a></li>
 </ul>
 </body>
 </html>
