--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hackers at Cambridge - The Cambridge tech society</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="main.css">
-</head>
-<body>
-  <img src="images/logo.png" class="logo">
-  <br>
-  Hackers at Cambridge is a student technology society based in Cambridge, UK
-  <br>
-  <div class="content-container">
-    <section class="splash-section">
-      <h2>Workshops</h2>
-      We run workshops on modern technologies to help you get started on your tech side projects. You can see what events we have coming up <a href="https://www.facebook.com/pg/hackersatcambridge/events">here</a>
-      <br><br>
-      If you've missed one of our workshops and would like to catch up, check out <a href="https://www.youtube.com/channel/UCNY6ekV9z84ZYL4qUDusTFw">our YouTube page</a> for recordings
-      <br><br>
-      If you think you might like to help out at one of our workshops, join the demonstrators group <a href="https://www.facebook.com/groups/1567785333234852/">here</a>, we'd love to have you!
-    </section>
-    <section class="splash-section">
-      <h2>HaC Nights</h2>
-      HaC Nights are our weekly hang outs where we get together to work on projects and learn new skills. Everyone is welcome, no matter what you happen to be working on. Check out when the next HaC Night is <a href="https://www.facebook.com/pg/hackersatcambridge/events">here</a>
-    </section>
-  </div>
-</body>
+<html lang="en" class="splash-container">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Hackers at Cambridge - The Cambridge tech society</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="main.css">
+  </head>
+  <body>
+    <img src="images/logo.png" class="logo">
+    <br>
+    Hackers at Cambridge is a student technology society based in Cambridge, UK
+    <br>
+    <div class="content-container">
+      <section class="splash-section">
+        <h2>Workshops</h2>
+        We run workshops on modern technologies to help you get started on your tech side projects. You can see what events we have coming up <a href="https://www.facebook.com/pg/hackersatcambridge/events">here</a>
+        <br><br>
+        If you've missed one of our workshops and would like to catch up, check out <a href="https://www.youtube.com/channel/UCNY6ekV9z84ZYL4qUDusTFw">our YouTube page</a> for recordings
+        <br><br>
+        If you think you might like to help out at one of our workshops, join the demonstrators group <a href="https://www.facebook.com/groups/1567785333234852/">here</a>, we'd love to have you!
+      </section>
+      <section class="splash-section">
+        <h2>HaC Nights</h2>
+        HaC Nights are our weekly hang outs where we get together to work on projects and learn new skills. Everyone is welcome, no matter what you happen to be working on. Check out when the next HaC Night is <a href="https://www.facebook.com/pg/hackersatcambridge/events">here</a>
+      </section>
+    </div>
+  </body>
 </html>
