--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <br>
     <div class="content-container">
       <section class="splash-section">
+        <h2>ChariTech</h2>
+        <a href="https://www.facebook.com/events/250269785415402">ChariTech</a> is the place to be if you want to do something to make a real difference. Whether you have never seen a single line of code before, or whether you've used technology your whole life!
+        <br><br>
+        Join Hackers at Cambridge at the end of term on the 17th of March for 12 hours of hackathon madness, where we’ll be introducing you to a whole range of different charities who need your help. You’ll be working with these charities to produce new and innovative products and solutions which will really be able to make a difference.
+        <br><br>
+        Beginners are welcome, even if you have never heard the word ‘hackathon’ before! If you have experience working with a charity, we would love you to come and need your skills & ideas. You may even learn something new too!
+      </section>
+      <section class="splash-section">
         <h2>Workshops</h2>
         We run workshops on modern technologies to help you get started on your tech side projects. You can see what events we have coming up <a href="https://www.facebook.com/pg/hackersatcambridge/events">here</a>
         <br><br>
