Add a more 2017-ready design

--- a/index.html
+++ b/index.html
@@ -1,39 +1,82 @@
 <!DOCTYPE html>
-<html lang="en" class="splash-container">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hackers at Cambridge - The Cambridge tech society</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="main.css">
-  </head>
-  <body>
-    <img src="images/logo.png" class="logo">
-    <br>
-    Hackers at Cambridge is a student technology society based in Cambridge, UK
-    <br>
-    <div class="content-container">
-      <section class="splash-section">
-        <h2>ChariTech</h2>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Cambridge's student tech society | Hackers at Cambridge</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <link href="https://fonts.googleapis.com/css?family=Cousine" rel="stylesheet">
+</head>
+<body>
+  <div class="body-container">
+    <header class="site-header">
+      <img src="images/hac-logo.svg" class="header-logo">
+      <!-- <img src="hac-logo.png" class="header-logo"> -->
+      <h2 class="subtitle mono">// cambridge's student tech society</h2>
+    </header>
+    <div class="banner mono"><strong>Featured event:</strong> <a href="https://www.facebook.com/events/250269785415402/"><em>Charitech</em></a></div>
+    <div class="hero">
+      <div class="hero-content">
+        <img src="images/charitech.jpg">
+        <br>
+        <br>
         <a href="https://www.facebook.com/events/250269785415402">ChariTech</a> is the place to be if you want to do something to make a real difference. Whether you have never seen a single line of code before, or whether you've used technology your whole life!
-        <br><br>
-        Join Hackers at Cambridge at the end of term on the 17th of March for 12 hours of hackathon madness, where we’ll be introducing you to a whole range of different charities who need your help. You’ll be working with these charities to produce new and innovative products and solutions which will really be able to make a difference.
-        <br><br>
-        Beginners are welcome, even if you have never heard the word ‘hackathon’ before! If you have experience working with a charity, we would love you to come and need your skills & ideas. You may even learn something new too!
+          <br><br>
+          Join Hackers at Cambridge at the end of term on the 17th of March for 12 hours of hackathon madness, where we’ll be introducing you to a whole range of different charities who need your help. You’ll be working with these charities to produce new and innovative products and solutions which will really be able to make a difference.
+          <br><br>
+          Beginners are welcome, even if you have never heard the word ‘hackathon’ before! If you have experience working with a charity, we would love you to come and need your skills & ideas. You may even learn something new too!
+      </div>
+    </div>
+    <div class="content-wrapper">
+      <section>
+        <h2 class="mono section-title">Workshops</h2>
+        Run by members of the community and open to everyone, our workshops aim to help and encourage you to work on technology side projects.
+        <br>
+        <br>
+        <div class="featured clearfix">
+          <div class="featured-image">
+            <img src="images/rxjava.png" alt="Intro to RxJava">
+          </div>
+          <div class="featured-text mono">
+            <strong>Upcoming:</strong><br>
+            <a href="https://www.facebook.com/events/1183644148400223/">
+              <em>Introduction to RxJava</em>
+            </a>
+          </div>
+        </div>
+        
       </section>
-      <section class="splash-section">
-        <h2>Workshops</h2>
-        We run workshops on modern technologies to help you get started on your tech side projects. You can see what events we have coming up <a href="https://www.facebook.com/pg/hackersatcambridge/events">here</a>
-        <br><br>
-        If you've missed one of our workshops and would like to catch up, check out <a href="https://www.youtube.com/channel/UCNY6ekV9z84ZYL4qUDusTFw">our YouTube page</a> for recordings
-        <br><br>
-        If you think you might like to help out at one of our workshops, join the demonstrators group <a href="https://www.facebook.com/groups/1567785333234852/">here</a>, we'd love to have you!
+      <section>
+        <h2 class="mono section-title">Events</h2>
+        The HaC committee regularly run hackathons, concentrated doses of building cool stuff, along with other events to give you a focused chance to create.
+        <br>
+        <br>
+        <div class="featured clearfix">
+          <div class="featured-image">
+            <img src="images/charitech.jpg">
+          </div>
+          <div class="featured-text mono">
+            <strong>Upcoming:</strong><br>
+            <a href="https://www.facebook.com/events/250269785415402/"><em>Charitech</em></a>
+          </div>
+        </div>
       </section>
-      <section class="splash-section">
-        <h2>HaC Nights</h2>
-        HaC Nights are our weekly hang outs where we get together to work on projects and learn new skills. Everyone is welcome, no matter what you happen to be working on. Check out when the next HaC Night is <a href="https://www.facebook.com/pg/hackersatcambridge/events">here</a>
+      <section>
+        <h2 class="mono section-title">Socials</h2>
+        <em>HaC Nights</em> are your weekly chance to hang out with like-minded people and learn new tech skills together or work on that side-project you've had in mind. Whatever your experience level, you are welcome at HaC Nights. If you're just getting started, there'll be plenty of people here willing to help you out. We bring the snacks, you bring your ideas, laptop and questions, and there's bound to be someone in the room with the answers.
+      </section>
+      <section class="mono center">
+        Sounding pretty good?<br>
+        <a href="http://eepurl.com/ckeD2b">Join the mailing list</a>
       </section>
     </div>
-  </body>
+  </div>
+  <!-- <div class="navigation">
+    <ul class="mono">
+      <li><a href="#">about</a></li>
+      <li><a href="#">workshops</a></li>
+      <li><a href="#">get involved</a></li>
+      <li><a href="#">get involved</a></li>
+    </ul>
+  </div> -->
+</body>
 </html>
