Minor updates for Easter term

--- a/index.html
+++ b/index.html
@@ -14,17 +14,10 @@
       <!-- <img src="hac-logo.png" class="header-logo"> -->
       <h2 class="subtitle mono">// cambridge's student tech society</h2>
     </header>
-    <div class="banner mono"><strong>Featured event:</strong> <a href="https://www.facebook.com/events/250269785415402/"><em>Charitech</em></a></div>
+    <div class="banner mono"><strong>Featured:</strong><em>QuickCS</em></div>
     <div class="hero">
       <div class="hero-content">
-        <img src="images/charitech.jpg">
-        <br>
-        <br>
-        <a href="https://www.facebook.com/events/250269785415402">ChariTech</a> is the place to be if you want to do something to make a real difference. Whether you have never seen a single line of code before, or whether you've used technology your whole life!
-          <br><br>
-          Join Hackers at Cambridge at the end of term on the 17th of March for 12 hours of hackathon madness, where we’ll be introducing you to a whole range of different charities who need your help. You’ll be working with these charities to produce new and innovative products and solutions which will really be able to make a difference.
-          <br><br>
-          Beginners are welcome, even if you have never heard the word ‘hackathon’ before! If you have experience working with a charity, we would love you to come and need your skills & ideas. You may even learn something new too!
+        Hackers at Cambridge are putting together a series of short videos explaining the computer science topics that we have found challenging. We hope this can help during the revision push! If you have any ideas for topics you'd like to see explained, let us know at <a href="mailto:team@hackersatcambridge.com">team@hackersatcambridge.com</a>
       </div>
     </div>
     <div class="content-wrapper">
@@ -42,7 +35,7 @@
             <img src="images/rxjava.png" alt="Intro to RxJava">
           </div>
           <div class="featured-text mono">
-            <strong>Upcoming:</strong><br>
+            <strong>Previously:</strong><br>
             <a href="https://www.facebook.com/events/1183644148400223/">
               <em>Introduction to RxJava</em>
             </a>
@@ -60,7 +53,7 @@
             <img src="images/charitech.jpg">
           </div>
           <div class="featured-text mono">
-            <strong>Upcoming:</strong><br>
+            <strong>Previously:</strong><br>
             <a href="https://www.facebook.com/events/250269785415402/"><em>Charitech</em></a>
           </div>
         </div>
@@ -68,6 +61,8 @@
       <section>
         <h2 class="mono section-title">Socials</h2>
         <em>HaC Nights</em> are your weekly chance to hang out with like-minded people and learn new tech skills together or work on that side-project you've had in mind. Whatever your experience level, you are welcome at HaC Nights. If you're just getting started, there'll be plenty of people here willing to help you out. We bring the snacks, you bring your ideas, laptop and questions, and there's bound to be someone in the room with the answers.
+        <br>
+        Find us on <a href="https://www.facebook.com/hackersatcambridge/">our Facebook Page</a> to stay up to date.
       </section>
       <section class="mono center">
         Sounding pretty good?<br>
